<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_MODE" Id="{17034d6d-9c8d-4d5a-a904-8c0ea8b954e4}">
    <Declaration><![CDATA[/// MODE to run (inside of MODULE_INTERFACE_INPUT)
TYPE DUT_MODE :
(
	///Initialitzation number mode
	Init := 0,
	///Automatic number mode
	Auto := 1,
	///Manual number mode
	Manual := 2,
	Reset := 3
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>